refactor(expenses)!: reorganize into feature-based architecture with comprehensive tests
BREAKING CHANGE: DTOs moved from expenses/ to expenses/dto/ package

- Reorganize code into feature-based packages (dto/, exception/, mapper/, validation/)
- Add ExpenseRepository interface for data access abstraction
- Implement comprehensive integration test suite (32 tests covering all CRUD operations)
- Add validation tests for currency codes, amounts, and business rules
- Implement optimistic locking with version conflict handling (409 responses)
- Add global exception handler with standardized error responses
- Update project documentation (README.md, CLAUDE.md, constitution)
- Configure H2 database (file-based for production, in-memory for tests)
- Enhance .gitignore for database files, logs, and OS artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,23 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### H2 Database ###
+data/
+*.mv.db
+*.trace.db
+
+### Environment & Secrets ###
+.env
+.env.local
+.env.*.local
+
+### Logs ###
+*.log
+logs/
+
+### OS ###
+.DS_Store
+Thumbs.db
+*.tmp
+*.swp
