--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,26 @@
 spring:
   application:
     name: moneytrak
+
+  datasource:
+    url: jdbc:h2:file:./data/moneytrak
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+
+  h2:
+    console:
+      enabled: true  # Access at http://localhost:8080/h2-console
+      path: /h2-console
+
+  jpa:
+    hibernate:
+      ddl-auto: update  # Auto-create/update schema
+    show-sql: false    # Set true for SQL debugging
+    properties:
+      hibernate:
+        format_sql: true
+
+logging:
+  level:
+    org.springframework.boot.autoconfigure.h2: DEBUG
