feat(security): add role-based HTTP Basic authentication with 3 roles
   Add Spring Security 7 with HTTP Basic Authentication and three
   configurable roles (APP, BACKOFFICE, ADMIN) to protect all API
   endpoints. Users are defined in application.yaml with BCrypt-hashed
   passwords — no database changes required.

   - APP: read-only access to /v1/** (GET only)
   - BACKOFFICE: full CRUD on /v1/** transactions and categories
   - ADMIN: full CRUD + actuator endpoints + H2 console
   - Health endpoint (/actuator/health) remains publicly accessible
   - Custom JSON error responses (401/403) match existing ErrorResponseDto
   - Failed auth attempts logged at WARN level (username, IP, timestamp)
   - 32 new security integration tests, 63 total tests passing
   - Fix: use spring-boot-starter-security-test for Spring Boot 4 MockMvc

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -21,6 +21,28 @@ spring:
       hibernate:
         format_sql: true
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
+  endpoint:
+    health:
+      show-details: never
+
+moneytrak:
+  security:
+    users:
+      - username: app-client
+        password: "{bcrypt}$2a$10$GRLdNijSQMUvl/au9ofL.eDwmoohzzS7.rmNSJZ.0FxO/BTk76klW"
+        role: APP
+      - username: backoffice
+        password: "{bcrypt}$2a$10$GRLdNijSQMUvl/au9ofL.eDwmoohzzS7.rmNSJZ.0FxO/BTk76klW"
+        role: BACKOFFICE
+      - username: admin
+        password: "{bcrypt}$2a$10$GRLdNijSQMUvl/au9ofL.eDwmoohzzS7.rmNSJZ.0FxO/BTk76klW"
+        role: ADMIN
+
 logging:
   level:
     org.springframework.boot.autoconfigure.h2: DEBUG
