refactor: apply post-review improvements across architecture, quality, tests, and performance
- Switch default profile to PostgreSQL with env-var credentials; add application-local.yaml for H2 local dev
- Add PostgreSQL driver dependency to pom.xml
- Paginate list endpoints (Page<T>) for transactions and categories with @PageableDefault
- Composable optional filters (categoryId + stability) via single JPQL JOIN FETCH query, eliminating N+1
- Protect "Others" category from rename (409 Conflict)
- Fix CategorySeeder idempotency to use existsByNameIgnoreCase("Others")
- CategoryInUseException extends ConflictException so existing handler catches it without extra entry
- Rename Transaction fields transactionType/transactionStability -> type/stability (column names unchanged)
- Fix validation error message: "Invalid expense data" -> "Validation failed"
- Remove EntityManager.flush() after save (unnecessary with JPA flush-on-commit)
- Set ddl-auto: validate in all profiles (Flyway owns schema)
- Add V3 Flyway migration: composite index on (transaction_type, amount) for aggregate queries
- Add 27 unit tests: LocalTransactionServiceTest (11), LocalCategoryServiceTest (10), TransactionMapperTest (6)
- Update integration tests for paginated response shape ($.content[*], $.totalElements)
- Add composable-filter integration test and Others-rename protection test
- Fix test profile to override driver/dialect so H2 tests work against PostgreSQL base config

92/92 tests passing (up from 63)

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,23 +3,19 @@ spring:
     name: moneytrak
 
   datasource:
-    url: jdbc:h2:file:./data/moneytrak
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
-
-  h2:
-    console:
-      enabled: true  # Access at http://localhost:8080/h2-console
-      path: /h2-console
+    url: ${DB_URL}
+    driver-class-name: org.postgresql.Driver
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
 
   jpa:
     hibernate:
-      ddl-auto: update  # Auto-create/update schema
+      ddl-auto: validate  # Validate schema matches entities; Flyway owns migrations
     show-sql: false    # Set true for SQL debugging
     properties:
       hibernate:
         format_sql: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
 
 management:
   endpoints:
@@ -34,15 +30,11 @@ moneytrak:
   security:
     users:
       - username: app-client
-        password: "{bcrypt}$2a$10$GRLdNijSQMUvl/au9ofL.eDwmoohzzS7.rmNSJZ.0FxO/BTk76klW"
+        password: "${APP_CLIENT_PASSWORD}"
         role: APP
       - username: backoffice
-        password: "{bcrypt}$2a$10$GRLdNijSQMUvl/au9ofL.eDwmoohzzS7.rmNSJZ.0FxO/BTk76klW"
+        password: "${BACKOFFICE_PASSWORD}"
         role: BACKOFFICE
       - username: admin
-        password: "{bcrypt}$2a$10$GRLdNijSQMUvl/au9ofL.eDwmoohzzS7.rmNSJZ.0FxO/BTk76klW"
+        password: "${ADMIN_PASSWORD}"
         role: ADMIN
-
-logging:
-  level:
-    org.springframework.boot.autoconfigure.h2: DEBUG
