fix: close API contract gaps identified in code review
- Add `version` field to CategoryDto so clients can read it on GET and
  pass it back on PUT for optimistic locking (was broken — clients had
  no way to know the current version before updating a category)

- Introduce SummaryDto to wrap summary endpoint responses instead of
  returning a bare BigDecimal; consistent with all other endpoints and
  extensible without breaking the wire format

- Add Testcontainers PostgreSQL integration test profile (Testcontainers
  2.0 + testcontainers-bom:2.0.2); tests skip gracefully when Docker is
  unavailable via @EnabledIfDockerAvailable; also removes hardcoded
  H2Dialect from application-test.yaml so Hibernate auto-detects the
  dialect from the active datasource

Note: V2 Flyway migration uses RANDOM_UUID() (H2-only); Flyway is
disabled for the Postgres tests and CategorySeeder handles seeding.
The migration itself needs a separate fix for production PostgreSQL.

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -7,9 +7,9 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create-drop  # Clean database per test
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.H2Dialect
+    # Dialect is intentionally omitted — Hibernate auto-detects from the datasource.
+    # H2 tests use H2Dialect; PostgreSQL Testcontainers tests override the datasource
+    # and get PostgreSQLDialect without changing this file.
 
 moneytrak:
   security:
