feat: implement portfolio readings feature with accounts and readings
Adds complete portfolio tracking capabilities with Account and Reading entities,
supporting balance snapshots over time across multiple financial accounts.

Features implemented:
- Account management (CRUD) with 6 account types (BANK, BROKER, STOCK, P2P, CRYPTO, OTHER)
- 1000 account hard limit enforcement with validation
- Reading management (CRUD) with soft deletion (tombstone pattern)
- DECIMAL(15,8) precision for cryptocurrency support (8 decimals)
- Negative amounts support for debts/margins
- Immutable accountId after reading creation
- Optimized latest readings query with JOIN FETCH (prevents N+1)
- Paginated account reading history (default 50/page)
- Deterministic ordering by name + ID

Database changes:
- V4 migration: accounts and readings tables with optimized indexes
- Composite index on (account_id, reading_date DESC) for performance
- Index on (name, id) for deterministic ordering
- Soft delete support via deleted boolean column

Tests added (46 new tests):
- 19 Account integration tests covering CRUD, limit enforcement, validation
- 27 Reading integration tests covering soft deletion, pagination, negative amounts
- 7 Security integration tests for new endpoints
- All 150 tests passing

Breaking changes:
- GET /v1/accounts/{id}/readings now returns Page<ReadingDto> instead of List<ReadingDto>

Performance improvements:
- Disabled Flyway for tests (use Hibernate DDL)
- Latest readings query uses subquery + JOIN FETCH (single SELECT)
- Account reading history paginated to prevent unbounded result sets

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -10,3 +10,5 @@ spring:
     # Dialect is intentionally omitted — Hibernate auto-detects from the datasource.
     # H2 tests use H2Dialect; PostgreSQL Testcontainers tests override the datasource
     # and get PostgreSQLDialect without changing this file.
+  flyway:
+    enabled: false  # Disable Flyway for tests; use Hibernate schema generation instead
